--- a/LaMiaPizzeria/appsettings.json
+++ b/LaMiaPizzeria/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ProfileContextConnection": "Server=(localdb)\\mssqllocaldb;Database=LaMiaPizzeria;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
